efc final commits

--- a/Server/WebAPI/WebAPI.csproj
+++ b/Server/WebAPI/WebAPI.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\RepositoryContracts\RepositoryContracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
