--- a/Client/BlazorApp/BlazorApp.csproj
+++ b/Client/BlazorApp/BlazorApp.csproj
@@ -7,10 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Components\Pages\ViewPosts.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Shared\DTOs\DTOs.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Auth\" />
+    <Folder Include="Components\Authentication\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
