--- a/Client/BlazorApp/Properties/launchSettings.json
+++ b/Client/BlazorApp/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "windowsAuthentication": false,
       "anonymousAuthentication": true,
       "iisExpress": {
-        "applicationUrl": "http://localhost:17833",
+        "applicationUrl": "http://localhost:5063;https://localhost:7206",
         "sslPort": 44379
       }
     },
@@ -22,7 +22,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7206;http://localhost:5063",
+        "applicationUrl": "https://localhost:7206",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
